Replace 'MulEA' with 'mulea'

--- a/readme/README.qmd
+++ b/readme/README.qmd
@@ -1,18 +1,18 @@
 ---
-title: "*MulEA*: an *R* package for Multi-Enrichment Analysis"
+title: "*mulea*: an *R* package for Multi-Enrichment Analysis"
 format: gfm
 ---
-![MulEA](images/MulEA_logo.png){fig-align="right"}
+![mulea](images/mulea_logo.png){fig-align="right"}
 
-## Installing the *MulEA* package using *devtools*
+## Installing the *mulea* package using *devtools*
 
 ```{r install}
 #| eval: false
 library(devtools)
-install_github("https://github.com/koralgooll/MulEA.git")
+install_github("https://github.com/koralgooll/mulea.git")
 ```
 
-## An example of how to use the *MulEA* package
+## An example of how to use the *mulea* package
 
 ### The data set to analyse
 
@@ -29,7 +29,7 @@ Reading the table containing the results of the differential expression analysis
 ```{r read_geo}
 #| warning: false
   
-library(MulEA)
+library(mulea)
 library(tidyverse)
 
 Geo2R_result_tab <- read_tsv("GSE55662.table_wt_non_vs_cipro.tsv")
@@ -69,8 +69,8 @@ Geo2R_result_tab %>%
 ### The database for the enrichment analysis
 
 -   We were curious about which **transcription factors** regulated the expression of the significantly overexpressed genes.
--   Therefore, we used the *MulEA* package to perform multi-enrichment analysis on the ![Regulon](images/Regulon.png) [database](https://regulondb.ccg.unam.mx/).
--   The *GMT* file containing genes symbols that are regulated by transcription factors was downloaded from the [Github page of MulEA](https://github.com/ELTEbioinformatics/mulea/blob/main/GMT/83333_Escherichia_coli/RegulonDB_Escherichia_coli_genesymbol_Leila.gmt).
+-   Therefore, we used the *mulea* package to perform multi-enrichment analysis on the ![Regulon](images/Regulon.png) [database](https://regulondb.ccg.unam.mx/).
+-   The *GMT* file containing genes symbols that are regulated by transcription factors was downloaded from the [Github page of mulea](https://github.com/ELTEbioinformatics/mulea/blob/main/GMT/83333_Escherichia_coli/RegulonDB_Escherichia_coli_genesymbol_Leila.gmt).
 
 Reading the *GMT* file containing the lists of gene symbols each transcription factor (indicated with gene symbols as well) regulates:
 
@@ -124,7 +124,7 @@ Regulon_GMT$listOfValues[[which(Regulon_GMT$ontologyId == "AcrR")]] %>%
 
 #### Filtering the ontology entries
 
-When interpreting the results of enrichment analyses, one may encounter the problem of the results being dominated by either overly specific or overly broad ontology entries being enriched. In *MulEA*, users can tailor the size of the ontology entries to their specific requirements, ensuring that the results match the expected scope.
+When interpreting the results of enrichment analyses, one may encounter the problem of the results being dominated by either overly specific or overly broad ontology entries being enriched. In *mulea*, users can tailor the size of the ontology entries to their specific requirements, ensuring that the results match the expected scope.
 
 Let's see the distribution of number of elements (gene symbols) in the `listOfValues` column to decide if we need to exclude too specific or too broad ontology entries:
 
