--- a/vignettes/mulea.Rmd
+++ b/vignettes/mulea.Rmd
@@ -166,9 +166,9 @@ Data frames with adjusted p-values contain one extra column, which include q-val
 
 Column names presented in results data.frame are:
 
-- `ontologyId` - input copy - Column copies from the input data frame. It include onlology ids. Could be for example ids from GO.
-- `ontologyName` - input copy - Column copies from the input data frame. It include onlology names. Could be for example name from GO as "mitochondrion inheritance".
-- `listOfValues` - input copy - Column copies from the input data frame. It include all symbols undet presented ontology id. Example from GO: FBgn0004407, FBgn0010438.
+- `ontology_id` - input copy - Column copies from the input data frame. It include onlology ids. Could be for example ids from GO.
+- `ontology_name` - input copy - Column copies from the input data frame. It include onlology names. Could be for example name from GO as "mitochondrion inheritance".
+- `list_of_values` - input copy - Column copies from the input data frame. It include all symbols undet presented ontology id. Example from GO: FBgn0004407, FBgn0010438.
 - `overlappingData` - output - Column includes set of intersection of list of values from model and provided by user experiment vector.
 - `contingencyTable` - output - This colum presents contingeny tables used to count test.
 - `p.value` - output - Cells of this column include counted p-value for provided data.
@@ -223,9 +223,9 @@ Below is the list of arguments accepted by the constructor of the `gsea`:
 
 Returned data frame from any ranked based test look like the following (column specification):
 
-- `ontologyId` - input copy - Column copies from the input data frame. It include onlology ids. Could be for example ids from GO.
-- `ontologyName` - input copy - Column copies from the input data frame. It include onlology names. Could be for example name from GO as "mitochondrion inheritance".
-- `listOfValues` - input copy - Column copies from the input data frame. It include all symbols undet presented ontology id. Example from GO: FBgn0004407, FBgn0010438.
+- `ontology_id` - input copy - Column copies from the input data frame. It include onlology ids. Could be for example ids from GO.
+- `ontology_name` - input copy - Column copies from the input data frame. It include onlology names. Could be for example name from GO as "mitochondrion inheritance".
+- `list_of_values` - input copy - Column copies from the input data frame. It include all symbols undet presented ontology id. Example from GO: FBgn0004407, FBgn0010438.
 - `p.value` - output - Cells of this column include counted p-value for provided data.
 
 ```{r, results = 'asis', echo = FALSE} 
