Changes to text
Replaced adjusted p value with snake case version. Added line breaks for better readability.

--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,11 @@ knitr::opts_chunk$set(
 
 <!-- badges: end -->
 
-Traditional gene set enrichment analyses are typically limited to a few ontologies and do not account for the interdependence of gene sets or terms, resulting in overcorrected *p*-values. To address these chellenges, we introduce `mulea`, an R package offering comprehensive overrepresentation and functional enrichment analysis. `mulea` employs an innovative empirical *false discovery rate* (*eFDR*) correction method, specifically designed for interconnected biological data, to accurately identify significant terms within diverse ontologies. Beyond conventional tools, `mulea` incorporates a wide range of ontologies encompassing Gene Ontology, pathways, regulatory elements, genomic locations, and protein domains. This flexibility empowers researchers to tailor enrichment analysis to their specific questions, such as identifying enriched transcriptional regulators in gene expression data or overrepresented protein domains in protein sets. To facilitate seamless analysis, `mulea` provides gene sets (in standardized GMT format) for 27 model organisms, covering 16 databases and various identifiers. The GMT files and the scripts we applied to create them are available at the [GMT_files_for_mulea](https://github.com/ELTEbioinformatics/GMT_files_for_mulea) repository. Additionally, the [`muleaData`](https://github.com/ELTEbioinformatics/muleaData) ExperimentData Bioconductor R package simplifies access to these 879 pre-defined ontologies. Furthermore, `mulea`'s architecture allows for easy integration of user-defined ontologies, expanding its applicability across diverse research areas.
+Traditional gene set enrichment analyses are typically limited to a few ontologies and do not account for the interdependence of gene sets or terms, resulting in overcorrected *p*-values. To address these chellenges, we introduce `mulea`, an R package offering comprehensive overrepresentation and functional enrichment analysis. 
+
+`mulea` employs an innovative empirical *false discovery rate* (*eFDR*) correction method, specifically designed for interconnected biological data, to accurately identify significant terms within diverse ontologies. Beyond conventional tools, `mulea` incorporates a wide range of ontologies encompassing Gene Ontology, pathways, regulatory elements, genomic locations, and protein domains. This flexibility empowers researchers to tailor enrichment analysis to their specific questions, such as identifying enriched transcriptional regulators in gene expression data or overrepresented protein domains in protein sets. 
+
+To facilitate seamless analysis, `mulea` provides gene sets (in standardized GMT format) for 27 model organisms, covering 16 databases and various identifiers. The GMT files and the scripts we applied to create them are available at the [GMT_files_for_mulea](https://github.com/ELTEbioinformatics/GMT_files_for_mulea) repository. Additionally, the [`muleaData`](https://github.com/ELTEbioinformatics/muleaData) ExperimentData Bioconductor R package simplifies access to these 879 pre-defined ontologies. Furthermore, `mulea`'s architecture allows for easy integration of user-defined ontologies, expanding its applicability across diverse research areas.
 
 ## Installation
 
@@ -433,12 +437,12 @@ gsea_results <- run_test(gsea_model)
 
 #### Examining the GSEA Results
 
-The `gsea_results` data frame summarizes the enrichment analysis, listing enriched ontology entries – in our case transcription factors – alongside their associated *p*-values and adjusted *p*-value values. We can now determine the number of transcription factors classified as "enriched" based on these statistical measures ($adjustedPValue<0.05$).
+The `gsea_results` data frame summarizes the enrichment analysis, listing enriched ontology entries – in our case transcription factors – alongside their associated *p*-values and adjusted *p*-value values. We can now determine the number of transcription factors classified as "enriched" based on these statistical measures ($adjusted_p_value<0.05$).
 
 ```{r 'gsea_size'}
 gsea_results %>%
-  # rows where the adjustedPValue < 0.05
-  filter(adjustedPValue < 0.05) %>% 
+  # rows where the adjusted_p_value < 0.05
+  filter(adjusted_p_value < 0.05) %>% 
   # the number of such rows
   nrow()
 ```
@@ -447,18 +451,18 @@ And inspect the significant results:
 
 ```{r 'print_gsea', eval=FALSE}
 gsea_results %>%
-  # arrange the rows by the adjustedPValue values
-  arrange(adjustedPValue) %>% 
-  # rows where the adjustedPValue < 0.05
-  filter(adjustedPValue < 0.05)
+  # arrange the rows by the adjusted_p_value values
+  arrange(adjusted_p_value) %>% 
+  # rows where the adjusted_p_value < 0.05
+  filter(adjusted_p_value < 0.05)
 ```
 
 ```{r 'print_gsea2', echo=FALSE}
 gsea_results %>%
-  # arrange the rows by the adjustedPValue values
-  arrange(adjustedPValue) %>% 
-  # rows where the adjustedPValue < 0.05
-  filter(adjustedPValue < 0.05) %>% 
+  # arrange the rows by the adjusted_p_value values
+  arrange(adjusted_p_value) %>% 
+  # rows where the adjusted_p_value < 0.05
+  filter(adjusted_p_value < 0.05) %>% 
   knitr::kable()
 ```
 
@@ -471,7 +475,7 @@ gsea_reshaped_results <- reshape_results(model = gsea_model,
                                          model_results = gsea_results, 
                                          # choosing which column to use for the
                                          # indication of significance
-                                         p_value_type_colname = "adjustedPValue")
+                                         p_value_type_colname = "adjusted_p_value")
 ```
 
 **Visualizing the spread of** **adjusted *p*-values: Lollipop plot**
@@ -483,7 +487,7 @@ plot_lollipop(reshaped_results = gsea_reshaped_results,
               # upper threshold for the value indicating the significance
               p_value_max_threshold = 0.05,
               # column that indicates the significance values
-              p_value_type_colname = "adjustedPValue")
+              p_value_type_colname = "adjusted_p_value")
 ```
 
 **Visualizing Relationships: Network Plot**
@@ -495,7 +499,7 @@ plot_graph(reshaped_results = gsea_reshaped_results,
            # upper threshold for the value indicating the significance
            p_value_max_threshold = 0.05,
            # column that indicates the significance values
-           p_value_type_colname = "adjustedPValue")
+           p_value_type_colname = "adjusted_p_value")
 ```
 
 **Heatmap**
@@ -505,7 +509,7 @@ plot_heatmap(reshaped_results = gsea_reshaped_results,
              # the column containing the names we wish to plot
              ontology_id_colname = "ontology_id",
              # column that indicates the significance values
-             p_value_type_colname = "adjustedPValue")
+             p_value_type_colname = "adjusted_p_value")
 ```
 
 ## How to Cite the `mulea` Package?
