--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,7 @@
 ---
-output: github_document
+github_document:
+    toc: true
+    toc_depth: 2
 bibliography: references.bib
 ---
 
@@ -480,7 +482,7 @@ gsea_reshaped_results <- reshape_results(model = gsea_model,
 
 **Visualizing the spread of** **adjusted *p*-values: Lollipop plot**
 
-```{r 'lollipop_plot_gsea', eval=FALSE}
+```{r 'lollipop_plot_gsea'}
 plot_lollipop(reshaped_results = gsea_reshaped_results,
               # the column containing the names we wish to plot
               ontology_id_colname = "ontology_id",
@@ -504,7 +506,7 @@ plot_graph(reshaped_results = gsea_reshaped_results,
 
 **Heatmap**
 
-```{r 'heatmap_gsea'}
+```{r 'heatmap_gsea', fig.width=30, fig.height=10}
 plot_heatmap(reshaped_results = gsea_reshaped_results,
              # the column containing the names we wish to plot
              ontology_id_colname = "ontology_id",
