--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,5 @@
 ---
-github_document:
-    toc: true
-    toc_depth: 2
+output: github_document
 bibliography: references.bib
 ---
 
@@ -24,9 +22,9 @@ knitr::opts_chunk$set(
 
 <!-- badges: end -->
 
-Traditional gene set enrichment analyses are typically limited to a few ontologies and do not account for the interdependence of gene sets or terms, resulting in overcorrected *p*-values. To address these chellenges, we introduce `mulea`, an R package offering comprehensive overrepresentation and functional enrichment analysis. 
+Traditional gene set enrichment analyses are typically limited to a few ontologies and do not account for the interdependence of gene sets or terms, resulting in overcorrected *p*-values. To address these chellenges, we introduce `mulea`, an R package offering comprehensive overrepresentation and functional enrichment analysis.
 
-`mulea` employs an innovative empirical *false discovery rate* (*eFDR*) correction method, specifically designed for interconnected biological data, to accurately identify significant terms within diverse ontologies. Beyond conventional tools, `mulea` incorporates a wide range of ontologies encompassing Gene Ontology, pathways, regulatory elements, genomic locations, and protein domains. This flexibility empowers researchers to tailor enrichment analysis to their specific questions, such as identifying enriched transcriptional regulators in gene expression data or overrepresented protein domains in protein sets. 
+`mulea` employs an innovative empirical *false discovery rate* (*eFDR*) correction method, specifically designed for interconnected biological data, to accurately identify significant terms within diverse ontologies. Beyond conventional tools, `mulea` incorporates a wide range of ontologies encompassing Gene Ontology, pathways, regulatory elements, genomic locations, and protein domains. This flexibility empowers researchers to tailor enrichment analysis to their specific questions, such as identifying enriched transcriptional regulators in gene expression data or overrepresented protein domains in protein sets.
 
 To facilitate seamless analysis, `mulea` provides gene sets (in standardized GMT format) for 27 model organisms, covering 16 databases and various identifiers. The GMT files and the scripts we applied to create them are available at the [GMT_files_for_mulea](https://github.com/ELTEbioinformatics/GMT_files_for_mulea) repository. Additionally, the [`muleaData`](https://github.com/ELTEbioinformatics/muleaData) ExperimentData Bioconductor R package simplifies access to these 879 pre-defined ontologies. Furthermore, `mulea`'s architecture allows for easy integration of user-defined ontologies, expanding its applicability across diverse research areas.
 
@@ -357,6 +355,20 @@ plot_lollipop(reshaped_results = ora_reshaped_results,
               p_value_type_colname = "eFDR")
 ```
 
+**Visualizing the spread of *eFDR* values: Bar plot**
+
+Bar charts offer very similar graphical representation of the distribution of enriched transcription factors as the lollipop plot. The *y*-axis displays the transcription factors, while the *x*-axis represents their corresponding *eFDR* values. The bars are is coloured based on their significance level. This visualization helps us examine the spread of *eFDR*s and identify factors exceeding the commonly used significance threshold of 0.05.
+
+```{r 'bar_plot_ora'}
+plot_barplot(reshaped_results = ora_reshaped_results,
+              # the column containing the names we wish to plot
+              ontology_id_colname = "ontology_id",
+              # upper threshold for the value indicating the significance
+              p_value_max_threshold = 0.05,
+              # column that indicates the significance values
+              p_value_type_colname = "eFDR")
+```
+
 **Visualizing Relationships: Network Plot**
 
 This function generates a network visualization of the enriched transcription factors. Each node represents a transcription factor and is coloured based on its significance level. A connection (edge) is drawn between two nodes if they share at least one common gene, meaning that both transcription factors regulate the expression of the same target gene. The thickness of the edge reflects the number of shared genes.
@@ -480,10 +492,22 @@ gsea_reshaped_results <- reshape_results(model = gsea_model,
                                          p_value_type_colname = "adjusted_p_value")
 ```
 
-**Visualizing the spread of** **adjusted *p*-values: Lollipop plot**
+**Visualizing the spread of adjusted *p*-values: Lollipop plot**
 
 ```{r 'lollipop_plot_gsea'}
 plot_lollipop(reshaped_results = gsea_reshaped_results,
+              # the column containing the names we wish to plot
+              ontology_id_colname = "ontology_id",
+              # upper threshold for the value indicating the significance
+              p_value_max_threshold = 0.05,
+              # column that indicates the significance values
+              p_value_type_colname = "adjusted_p_value")
+```
+
+**Visualizing the spread of adjusted *p*-values: Bar plot**
+
+```{r 'bar_plot_gsea'}
+plot_barplot(reshaped_results = gsea_reshaped_results,
               # the column containing the names we wish to plot
               ontology_id_colname = "ontology_id",
               # upper threshold for the value indicating the significance
@@ -506,7 +530,7 @@ plot_graph(reshaped_results = gsea_reshaped_results,
 
 **Heatmap**
 
-```{r 'heatmap_gsea', fig.width=30, fig.height=10}
+```{r 'heatmap_gsea', fig.width=20}
 plot_heatmap(reshaped_results = gsea_reshaped_results,
              # the column containing the names we wish to plot
              ontology_id_colname = "ontology_id",
