--- a/README.Rmd
+++ b/README.Rmd
@@ -160,7 +160,7 @@ tf_gmt %>%
   pull()
 ```
 
-#### **3. Focusing on Relevant Entries for the Enrichment Analysis**
+#### 3. Focusing on Relevant Entries for the Enrichment Analysis
 
 Enrichment analysis results can sometimes be skewed by overly specific or broad entries. `mulea` allows you to customize the size of ontology entries, ensuring your analysis aligns with your desired scope.
 
@@ -168,7 +168,7 @@ Enrichment analysis results can sometimes be skewed by overly specific or broad 
 
 Let's examine the distribution of the number of gene symbols in the `list_of_values` column to identify entries requiring exclusion:
 
-```{r 'plot_list_of_values', fig.height=3, fig.width=5}
+```{r 'plot_list_of_values'}
 Nr_of_elements_in_ontology <- tf_gmt$list_of_values %>% 
   map_dbl(length)
 ggplot(mapping = aes(Nr_of_elements_in_ontology)) + 
@@ -180,7 +180,7 @@ This plot reveals entries containing over 200 gene symbols, indicating these tra
 
 Conversely, some entries hold a very small number of elements. Let's zoom in:
 
-```{r 'plot_list_of_values_zoom', warning=FALSE, fig.height=3, fig.width=5}
+```{r 'plot_list_of_values_zoom', warning=FALSE}
 ggplot(mapping = aes(Nr_of_elements_in_ontology)) + 
   geom_bar() +
   xlim(0, 15) +
@@ -226,7 +226,7 @@ To ensure meaningful results, a clear threshold needs to be applied beforehand. 
 
 #### Preparing the Target set
 
-A vector containing the gene symbols of significantly overexpressed ($adjusted\ p-value < 0.05$) genes with greater than 2 fold-change ($logFC > 1$).
+A vector containing the gene symbols of significantly overexpressed (adjusted *p*-value < 0.05) genes with greater than 2 fold-change (logFC > 1).
 
 ```{r 'target_set'}
 sign_genes <- geo2r_result_tab %>% 
@@ -298,7 +298,7 @@ ora_results <- run_test(ora_model)
 
 #### Examining the ORA Result
 
-The `ora_results` data frame summarizes the enrichment analysis, listing enriched ontology entries – in our case transcription factors – alongside their associated *p*-values and *empirical FDR* values. We can now determine the number of transcription factors classified as "enriched" based on these statistical measures ($eFDR<0.05$).
+The `ora_results` data frame summarizes the enrichment analysis, listing enriched ontology entries – in our case transcription factors – alongside their associated *p*-values and *empirical FDR* values. We can now determine the number of transcription factors classified as "enriched" based on these statistical measures (*eFDR* < 0.05).
 
 ```{r 'ora_size'}
 ora_results %>%
@@ -371,7 +371,7 @@ plot_barplot(reshaped_results = ora_reshaped_results,
 
 **Visualizing Relationships: Network Plot**
 
-This function generates a network visualization of the enriched transcription factors. Each node represents a transcription factor and is coloured based on its significance level. A connection (edge) is drawn between two nodes if they share at least one common gene, meaning that both transcription factors regulate the expression of the same target gene. The thickness of the edge reflects the number of shared genes.
+This function generates a network visualization of the enriched transcription factors. Each node represents a transcription factor and is coloured based on its significance level. A connection (edge) is drawn between two nodes if they share at least one common gene belonging to the **target set**, meaning that both transcription factors regulate the expression of the same target gene. The thickness of the edge reflects the number of shared genes belonging to the **target set**.
 
 ```{r 'network_plot_ora'}
 plot_graph(reshaped_results = ora_reshaped_results,
@@ -385,7 +385,7 @@ plot_graph(reshaped_results = ora_reshaped_results,
 
 **Heatmap**
 
-The heatmap displays the genes associated with the enriched transcription factors. Each row represents a transcription factor and is coloured based on its significance level. Each column represents a target gene that is potentially regulated by one or more of the enriched transcription factors.
+The heatmap displays the genes associated with the enriched transcription factors. Each row represents a transcription factor and is coloured based on its significance level. Each column represents a target gene belonging to the **target set** that is potentially regulated by one or more of the enriched transcription factors.
 
 ```{r 'heatmap_ora'}
 plot_heatmap(reshaped_results = ora_reshaped_results,
@@ -451,7 +451,7 @@ gsea_results <- run_test(gsea_model)
 
 #### Examining the GSEA Results
 
-The `gsea_results` data frame summarizes the enrichment analysis, listing enriched ontology entries – in our case transcription factors – alongside their associated *p*-values and adjusted *p*-value values. We can now determine the number of transcription factors classified as "enriched" based on these statistical measures ($adjusted_p_value<0.05$).
+The `gsea_results` data frame summarizes the enrichment analysis, listing enriched ontology entries – in our case transcription factors – alongside their associated *p*-values and adjusted *p*-value values. We can now determine the number of transcription factors classified as "enriched" based on these statistical measures (adjusted *p*-value < 0.05).
 
 ```{r 'gsea_size'}
 gsea_results %>%
@@ -494,6 +494,8 @@ gsea_reshaped_results <- reshape_results(model = gsea_model,
 
 **Visualizing the spread of adjusted *p*-values: Lollipop plot**
 
+Lollipop charts offer a graphical representation of the distribution of enriched transcription factors. The *y*-axis displays the transcription factors, while the *x*-axis represents their corresponding adjusted *p*-values. The dots are is coloured based on their significance level. This visualization helps us examine the spread of adjusted *p*-values and identify factors exceeding the commonly used significance threshold of 0.05.
+
 ```{r 'lollipop_plot_gsea'}
 plot_lollipop(reshaped_results = gsea_reshaped_results,
               # the column containing the names we wish to plot
@@ -505,6 +507,8 @@ plot_lollipop(reshaped_results = gsea_reshaped_results,
 ```
 
 **Visualizing the spread of adjusted *p*-values: Bar plot**
+
+Bar charts offer very similar graphical representation of the distribution of enriched transcription factors as the lollipop plot. The *y*-axis displays the transcription factors, while the *x*-axis represents their corresponding adjusted *p*-values. The bars are is coloured based on their significance level. This visualization helps us examine the spread of adjusted *p*-values and identify factors exceeding the commonly used significance threshold of 0.05.
 
 ```{r 'bar_plot_gsea'}
 plot_barplot(reshaped_results = gsea_reshaped_results,
@@ -518,6 +522,8 @@ plot_barplot(reshaped_results = gsea_reshaped_results,
 
 **Visualizing Relationships: Network Plot**
 
+This function generates a network visualization of the enriched transcription factors. Each node represents a transcription factor and is coloured based on its significance level. A connection (edge) is drawn between two nodes if they share at least one common gene belonging to the **ranked list**, meaning that both transcription factors regulate the expression of the same target gene. The thickness of the edge reflects the number of shared genes belonging to the **ranked list**.
+
 ```{r 'network_plot_gsea'}
 plot_graph(reshaped_results = gsea_reshaped_results,
            # the column containing the names we wish to plot
@@ -529,6 +535,8 @@ plot_graph(reshaped_results = gsea_reshaped_results,
 ```
 
 **Heatmap**
+
+The heatmap displays the genes associated with the enriched transcription factors. Each row represents a transcription factor and is coloured based on its significance level. Each column represents a target gene belonging to the **ranked list** that is potentially regulated by one or more of the enriched transcription factors. There are too many genes belonging to each transcription factor, therefore heatmap visualization is less optimal in this case.
 
 ```{r 'heatmap_gsea', fig.width=20}
 plot_heatmap(reshaped_results = gsea_reshaped_results,
